<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">



    <TextView
        android:id="@+id/qcTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Iphone x Repair"
        android:textSize="15sp"
        android:fontFamily="@font/proxima_nova_regular"/>
    <RadioGroup
        android:id="@+id/qcRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
        <RadioButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:paddingLeft="10dp"
            android:layout_marginRight="10dp"/>
        <RadioButton
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:paddingLeft="10dp"
            android:layout_marginRight="10dp"/>
        <RadioButton
            android:id="@+id/nc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nc"
            android:paddingLeft="10dp"
            android:checked="true"
            android:layout_marginRight="10dp"/>


    </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>