<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/app_bar_main">
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/searchCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_margin="10dp"
           android:gravity="right">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_orderid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_textview">

                <EditText
                    android:id="@+id/input_orderId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:hint="@string/hint_orderid"
                    android:imeOptions="actionSearch"
                    android:padding="10dp"
                    android:inputType="number"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/searchBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundebutton"
                android:fontFamily="@font/proxima_nova_semi_bold"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/search"
                android:textColor="@color/white"
                card_view:layout_constraintRight_toRightOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/input_layout_orderid" />

       </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ordrdetailsCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/orderDetailsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/Order_details"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/customername"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cambria"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/name"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/customereail"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cambria"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/email"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/address"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/addressTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cambria"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/address"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/mobile"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mobileTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cambria"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/mobile"/>
                <ImageView
                    android:id="@+id/call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_call"
                    android:layout_toRightOf="@+id/mobileTV"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/prodDetailsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/product_details"
            android:textSize="18sp" />

        <android.support.v7.widget.RecyclerView
       android:id="@+id/prodRV"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
       app:layoutManager="android.support.v7.widget.LinearLayoutManager">

   </android.support.v7.widget.RecyclerView>

    </LinearLayout>
    </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

</LinearLayout>