<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/proddetailsCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="3dp"
        android:layout_marginTop="5dp"
        card_view:layout_constraintTop_toBottomOf="@+id/ordrdetailsCV">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/productTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:fontFamily="@font/proxima_nova_semi_bold"
                card_view:layout_constraintTop_toBottomOf="@+id/prodDetailsTV" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/ordrsource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/ordersource" />

                <TextView
                    android:id="@+id/ordrsourceTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/ordrsource"
                    android:fontFamily="@font/proxima_nova_regular" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/totalamount" />

                <TextView
                    android:id="@+id/priceTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/price"
                    android:fontFamily="@font/proxima_nova_regular" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/paymentmethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/paymentmethod" />

                <TextView
                    android:id="@+id/paymentmethodTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/paymentmethod"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:maxLines="5" />

            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>